// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<NavBar /> should render end icon-button 1`] = `
<NavBar
  buttons={
    Object {
      "end": Object {
        "icon": [Function],
      },
    }
  }
  subtitle="Очень очень очень очень длинный подзаголовок"
  title="Очень очень очень длинный заголовок"
>
  <div
    className="nav-bar"
  >
    <div
      className="button-groups"
    >
      <div
        className="group"
      >
        <NavButton
          icon={[Function]}
          shift={false}
          stub={true}
        >
          <button
            aria-hidden="true"
            className="button icon stub"
          />
        </NavButton>
      </div>
    </div>
    <div
      className="main"
    >
      <div
        className="title truncate"
      >
        Очень очень очень длинный заголовок
      </div>
      <div
        className="subtitle truncate"
      >
        Очень очень очень очень длинный подзаголовок
      </div>
    </div>
    <div
      className="button-groups end"
    >
      <div
        className="group"
      >
        <NavButton
          icon={[Function]}
          shift={false}
        >
          <button
            className="button icon"
          >
            <Icon
              aria-hidden="true"
              color="gray87"
              icon={[Function]}
              size={24}
            >
              <ArrowLeftSVG
                aria-hidden="true"
                className="icon icon-block color__gray87"
                height={24}
                viewBox="0 0 36 36"
                width={24}
                xmlns="http://www.w3.org/2000/svg"
              >
                <svg
                  aria-hidden="true"
                  className="icon icon-block color__gray87"
                  height={24}
                  viewBox="0 0 36 36"
                  width={24}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M8.121 19.5l7.941 7.938c.583.585.583 1.539 0 2.125a1.511 1.511 0 0 1-2.125 0l-10.5-10.5a1.511 1.511 0 0 1 0-2.125l10.5-10.5a1.511 1.511 0 0 1 2.126 0c.582.585.582 1.539 0 2.125L8.12 16.5H31.5a1.5 1.5 0 0 1 0 3zm0 0"
                  />
                </svg>
              </ArrowLeftSVG>
            </Icon>
          </button>
        </NavButton>
      </div>
    </div>
  </div>
</NavBar>
`;

exports[`<NavBar /> should render end link-button 1`] = `
<NavBar
  buttons={
    Object {
      "end": Object {
        "text": "Bar",
      },
    }
  }
  subtitle="Очень очень очень очень длинный подзаголовок"
  title="Очень очень очень длинный заголовок"
>
  <div
    className="nav-bar"
  >
    <div
      className="button-groups"
    >
      <div
        className="group"
      >
        <NavButton
          shift={false}
          stub={true}
          text="Bar"
        >
          <button
            aria-hidden="true"
            className="button stub"
          >
            Bar
          </button>
        </NavButton>
      </div>
    </div>
    <div
      className="main"
    >
      <div
        className="title truncate"
      >
        Очень очень очень длинный заголовок
      </div>
      <div
        className="subtitle truncate"
      >
        Очень очень очень очень длинный подзаголовок
      </div>
    </div>
    <div
      className="button-groups end"
    >
      <div
        className="group"
      >
        <NavButton
          shift={false}
          text="Bar"
        >
          <button
            className="button"
          >
            Bar
          </button>
        </NavButton>
      </div>
    </div>
  </div>
</NavBar>
`;

exports[`<NavBar /> should render four icon-buttons 1`] = `
<NavBar
  buttons={
    Object {
      "end": Object {
        "icon": [Function],
      },
      "endSecondary": Object {
        "icon": [Function],
      },
      "start": Object {
        "icon": [Function],
      },
      "startSecondary": Object {
        "icon": [Function],
      },
    }
  }
  subtitle="Очень очень очень очень длинный подзаголовок"
  title="Очень очень очень длинный заголовок"
>
  <div
    className="nav-bar"
  >
    <div
      className="button-groups"
    >
      <div
        className="group"
      >
        <NavButton
          icon={[Function]}
          shift="right"
        >
          <button
            className="button icon shift-right"
          >
            <Icon
              aria-hidden="true"
              color="gray87"
              icon={[Function]}
              size={24}
            >
              <ArrowLeftSVG
                aria-hidden="true"
                className="icon icon-block color__gray87"
                height={24}
                viewBox="0 0 36 36"
                width={24}
                xmlns="http://www.w3.org/2000/svg"
              >
                <svg
                  aria-hidden="true"
                  className="icon icon-block color__gray87"
                  height={24}
                  viewBox="0 0 36 36"
                  width={24}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M8.121 19.5l7.941 7.938c.583.585.583 1.539 0 2.125a1.511 1.511 0 0 1-2.125 0l-10.5-10.5a1.511 1.511 0 0 1 0-2.125l10.5-10.5a1.511 1.511 0 0 1 2.126 0c.582.585.582 1.539 0 2.125L8.12 16.5H31.5a1.5 1.5 0 0 1 0 3zm0 0"
                  />
                </svg>
              </ArrowLeftSVG>
            </Icon>
          </button>
        </NavButton>
        <NavButton
          icon={[Function]}
          shift="left"
        >
          <button
            className="button icon shift-left"
          >
            <Icon
              aria-hidden="true"
              color="gray87"
              icon={[Function]}
              size={24}
            >
              <CartSVG
                aria-hidden="true"
                className="icon icon-block color__gray87"
                height={24}
                viewBox="0 0 36 36"
                width={24}
                xmlns="http://www.w3.org/2000/svg"
              >
                <svg
                  aria-hidden="true"
                  className="icon icon-block color__gray87"
                  height={24}
                  viewBox="0 0 36 36"
                  width={24}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g
                    transform="matrix(.64166 0 0 .69492 0 2.034)"
                  >
                    <circle
                      cx="42"
                      cy="42"
                      r="4"
                    />
                    <circle
                      cx="22"
                      cy="42"
                      r="4"
                    />
                    <path
                      d="M18 28h28a1.92 1.92 0 0 0 1.8-1.2l8-16a2.33 2.33 0 0 0 0-2A3 3 0 0 0 54 8H15.2l-3.4-6.8A1.92 1.92 0 0 0 10 0H2a2 2 0 0 0 0 4h6.8l3.4 6.8 3.4 13.8A5.67 5.67 0 0 0 12 30a5.89 5.89 0 0 0 6 6h28a2 2 0 0 0 0-4H18a2 2 0 0 1 0-4zm32.8-16l-6 12H19.6l-3-12z"
                    />
                  </g>
                </svg>
              </CartSVG>
            </Icon>
          </button>
        </NavButton>
      </div>
      <div
        className="group"
      >
        <NavButton
          icon={[Function]}
          shift="right"
          stub={true}
        >
          <button
            aria-hidden="true"
            className="button icon shift-right stub"
          />
        </NavButton>
        <NavButton
          icon={[Function]}
          shift="left"
          stub={true}
        >
          <button
            aria-hidden="true"
            className="button icon shift-left stub"
          />
        </NavButton>
      </div>
    </div>
    <div
      className="main"
    >
      <div
        className="title truncate"
      >
        Очень очень очень длинный заголовок
      </div>
      <div
        className="subtitle truncate"
      >
        Очень очень очень очень длинный подзаголовок
      </div>
    </div>
    <div
      className="button-groups end"
    >
      <div
        className="group"
      >
        <NavButton
          icon={[Function]}
          shift="right"
        >
          <button
            className="button icon shift-right"
          >
            <Icon
              aria-hidden="true"
              color="gray87"
              icon={[Function]}
              size={24}
            >
              <UserSVG
                aria-hidden="true"
                className="icon icon-block color__gray87"
                height={24}
                viewBox="0 0 36 36"
                width={24}
                xmlns="http://www.w3.org/2000/svg"
              >
                <svg
                  aria-hidden="true"
                  className="icon icon-block color__gray87"
                  height={24}
                  viewBox="0 0 36 36"
                  width={24}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M23.477 32.082H11.328a3.037 3.037 0 0 1-3.037-3.038V22.97a3.037 3.037 0 0 1 2.476-2.976 8.883 8.883 0 0 0 13.272 0 3.037 3.037 0 0 1 2.475 2.976 1.519 1.519 0 0 0 3.037 0 6.074 6.074 0 0 0-3.933-5.664 13.378 13.378 0 0 0 .896-4.965c0-6.356-3.66-10.63-9.111-10.63-5.452 0-9.112 4.274-9.112 10.63a13.386 13.386 0 0 0 .889 4.958 6.074 6.074 0 0 0-3.926 5.671v6.074a6.074 6.074 0 0 0 6.074 6.075h12.149a1.519 1.519 0 0 0 0-3.037zM17.403 4.748c4.48 0 6.074 3.925 6.074 7.593 0 3.667-1.595 7.592-6.074 7.592-4.48 0-6.075-3.925-6.075-7.592 0-3.668 1.595-7.593 6.075-7.593z"
                  />
                  <path
                    d="M34.911 25.203a1.139 1.139 0 0 0-1.61 0l-5.269 5.269L25.8 28.24a1.139 1.139 0 0 0-1.61 1.61l3.038 3.036a1.139 1.139 0 0 0 1.61 0l6.073-6.074a1.139 1.139 0 0 0 0-1.61z"
                  />
                </svg>
              </UserSVG>
            </Icon>
          </button>
        </NavButton>
        <NavButton
          icon={[Function]}
          shift="left"
        >
          <button
            className="button icon shift-left"
          >
            <Icon
              aria-hidden="true"
              color="gray87"
              icon={[Function]}
              size={24}
            >
              <CrossSVG
                aria-hidden="true"
                className="icon icon-block color__gray87"
                height={24}
                viewBox="0 0 36 36"
                width={24}
                xmlns="http://www.w3.org/2000/svg"
              >
                <svg
                  aria-hidden="true"
                  className="icon icon-block color__gray87"
                  height={24}
                  viewBox="0 0 36 36"
                  width={24}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clipRule="evenodd"
                    d="M6.44 29.56a1.5 1.5 0 0 0 2.12 0L18 20.122l9.44 9.44a1.5 1.5 0 1 0 2.12-2.122L20.122 18l9.44-9.44a1.5 1.5 0 1 0-2.122-2.12L18 15.878l-9.44-9.44a1.5 1.5 0 0 0-2.12 2.122L15.878 18l-9.44 9.44a1.5 1.5 0 0 0 0 2.12z"
                    fillRule="evenodd"
                  />
                </svg>
              </CrossSVG>
            </Icon>
          </button>
        </NavButton>
      </div>
      <div
        className="group"
      >
        <NavButton
          icon={[Function]}
          shift="right"
          stub={true}
        >
          <button
            aria-hidden="true"
            className="button icon shift-right stub"
          />
        </NavButton>
        <NavButton
          icon={[Function]}
          shift="left"
          stub={true}
        >
          <button
            aria-hidden="true"
            className="button icon shift-left stub"
          />
        </NavButton>
      </div>
    </div>
  </div>
</NavBar>
`;

exports[`<NavBar /> should render icon-buttons 1`] = `
<NavBar
  buttons={
    Object {
      "end": Object {
        "icon": [Function],
      },
      "start": Object {
        "icon": [Function],
      },
    }
  }
  subtitle="Очень очень очень очень длинный подзаголовок"
  title="Очень очень очень длинный заголовок"
>
  <div
    className="nav-bar"
  >
    <div
      className="button-groups"
    >
      <div
        className="group"
      >
        <NavButton
          icon={[Function]}
          shift={false}
        >
          <button
            className="button icon"
          >
            <Icon
              aria-hidden="true"
              color="gray87"
              icon={[Function]}
              size={24}
            >
              <ArrowLeftSVG
                aria-hidden="true"
                className="icon icon-block color__gray87"
                height={24}
                viewBox="0 0 36 36"
                width={24}
                xmlns="http://www.w3.org/2000/svg"
              >
                <svg
                  aria-hidden="true"
                  className="icon icon-block color__gray87"
                  height={24}
                  viewBox="0 0 36 36"
                  width={24}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M8.121 19.5l7.941 7.938c.583.585.583 1.539 0 2.125a1.511 1.511 0 0 1-2.125 0l-10.5-10.5a1.511 1.511 0 0 1 0-2.125l10.5-10.5a1.511 1.511 0 0 1 2.126 0c.582.585.582 1.539 0 2.125L8.12 16.5H31.5a1.5 1.5 0 0 1 0 3zm0 0"
                  />
                </svg>
              </ArrowLeftSVG>
            </Icon>
          </button>
        </NavButton>
      </div>
      <div
        className="group"
      >
        <NavButton
          icon={[Function]}
          shift={false}
          stub={true}
        >
          <button
            aria-hidden="true"
            className="button icon stub"
          />
        </NavButton>
      </div>
    </div>
    <div
      className="main"
    >
      <div
        className="title truncate"
      >
        Очень очень очень длинный заголовок
      </div>
      <div
        className="subtitle truncate"
      >
        Очень очень очень очень длинный подзаголовок
      </div>
    </div>
    <div
      className="button-groups end"
    >
      <div
        className="group"
      >
        <NavButton
          icon={[Function]}
          shift={false}
        >
          <button
            className="button icon"
          >
            <Icon
              aria-hidden="true"
              color="gray87"
              icon={[Function]}
              size={24}
            >
              <CrossSVG
                aria-hidden="true"
                className="icon icon-block color__gray87"
                height={24}
                viewBox="0 0 36 36"
                width={24}
                xmlns="http://www.w3.org/2000/svg"
              >
                <svg
                  aria-hidden="true"
                  className="icon icon-block color__gray87"
                  height={24}
                  viewBox="0 0 36 36"
                  width={24}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clipRule="evenodd"
                    d="M6.44 29.56a1.5 1.5 0 0 0 2.12 0L18 20.122l9.44 9.44a1.5 1.5 0 1 0 2.12-2.122L20.122 18l9.44-9.44a1.5 1.5 0 1 0-2.122-2.12L18 15.878l-9.44-9.44a1.5 1.5 0 0 0-2.12 2.122L15.878 18l-9.44 9.44a1.5 1.5 0 0 0 0 2.12z"
                    fillRule="evenodd"
                  />
                </svg>
              </CrossSVG>
            </Icon>
          </button>
        </NavButton>
      </div>
      <div
        className="group"
      >
        <NavButton
          icon={[Function]}
          shift={false}
          stub={true}
        >
          <button
            aria-hidden="true"
            className="button icon stub"
          />
        </NavButton>
      </div>
    </div>
  </div>
</NavBar>
`;

exports[`<NavBar /> should render just title and subtitle 1`] = `
<NavBar
  subtitle="World"
  title="Hello"
>
  <div
    className="nav-bar"
  >
    <div
      className="main"
    >
      <div
        className="title truncate"
      >
        Hello
      </div>
      <div
        className="subtitle truncate"
      >
        World
      </div>
    </div>
  </div>
</NavBar>
`;

exports[`<NavBar /> should render link-buttons 1`] = `
<NavBar
  buttons={
    Object {
      "end": Object {
        "text": "Bar",
      },
      "start": Object {
        "text": "Foo",
      },
    }
  }
  subtitle="Очень очень очень очень длинный подзаголовок"
  title="Очень очень очень длинный заголовок"
>
  <div
    className="nav-bar"
  >
    <div
      className="button-groups"
    >
      <div
        className="group"
      >
        <NavButton
          shift={false}
          text="Foo"
        >
          <button
            className="button"
          >
            Foo
          </button>
        </NavButton>
      </div>
      <div
        className="group"
      >
        <NavButton
          shift={false}
          stub={true}
          text="Bar"
        >
          <button
            aria-hidden="true"
            className="button stub"
          >
            Bar
          </button>
        </NavButton>
      </div>
    </div>
    <div
      className="main"
    >
      <div
        className="title truncate"
      >
        Очень очень очень длинный заголовок
      </div>
      <div
        className="subtitle truncate"
      >
        Очень очень очень очень длинный подзаголовок
      </div>
    </div>
    <div
      className="button-groups end"
    >
      <div
        className="group"
      >
        <NavButton
          shift={false}
          text="Bar"
        >
          <button
            className="button"
          >
            Bar
          </button>
        </NavButton>
      </div>
      <div
        className="group"
      >
        <NavButton
          shift={false}
          stub={true}
          text="Foo"
        >
          <button
            aria-hidden="true"
            className="button stub"
          >
            Foo
          </button>
        </NavButton>
      </div>
    </div>
  </div>
</NavBar>
`;

exports[`<NavBar /> should render mixed buttons 1`] = `
<NavBar
  buttons={
    Object {
      "end": Object {
        "icon": [Function],
      },
      "start": Object {
        "text": "Foo",
      },
    }
  }
  subtitle="Очень очень очень очень длинный подзаголовок"
  title="Очень очень очень длинный заголовок"
>
  <div
    className="nav-bar"
  >
    <div
      className="button-groups"
    >
      <div
        className="group"
      >
        <NavButton
          shift={false}
          text="Foo"
        >
          <button
            className="button"
          >
            Foo
          </button>
        </NavButton>
      </div>
      <div
        className="group"
      >
        <NavButton
          icon={[Function]}
          shift={false}
          stub={true}
        >
          <button
            aria-hidden="true"
            className="button icon stub"
          />
        </NavButton>
      </div>
    </div>
    <div
      className="main"
    >
      <div
        className="title truncate"
      >
        Очень очень очень длинный заголовок
      </div>
      <div
        className="subtitle truncate"
      >
        Очень очень очень очень длинный подзаголовок
      </div>
    </div>
    <div
      className="button-groups end"
    >
      <div
        className="group"
      >
        <NavButton
          icon={[Function]}
          shift={false}
        >
          <button
            className="button icon"
          >
            <Icon
              aria-hidden="true"
              color="gray87"
              icon={[Function]}
              size={24}
            >
              <CrossSVG
                aria-hidden="true"
                className="icon icon-block color__gray87"
                height={24}
                viewBox="0 0 36 36"
                width={24}
                xmlns="http://www.w3.org/2000/svg"
              >
                <svg
                  aria-hidden="true"
                  className="icon icon-block color__gray87"
                  height={24}
                  viewBox="0 0 36 36"
                  width={24}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clipRule="evenodd"
                    d="M6.44 29.56a1.5 1.5 0 0 0 2.12 0L18 20.122l9.44 9.44a1.5 1.5 0 1 0 2.12-2.122L20.122 18l9.44-9.44a1.5 1.5 0 1 0-2.122-2.12L18 15.878l-9.44-9.44a1.5 1.5 0 0 0-2.12 2.122L15.878 18l-9.44 9.44a1.5 1.5 0 0 0 0 2.12z"
                    fillRule="evenodd"
                  />
                </svg>
              </CrossSVG>
            </Icon>
          </button>
        </NavButton>
      </div>
      <div
        className="group"
      >
        <NavButton
          shift={false}
          stub={true}
          text="Foo"
        >
          <button
            aria-hidden="true"
            className="button stub"
          >
            Foo
          </button>
        </NavButton>
      </div>
    </div>
  </div>
</NavBar>
`;

exports[`<NavBar /> should render start icon-button 1`] = `
<NavBar
  buttons={
    Object {
      "start": Object {
        "icon": [Function],
      },
    }
  }
  subtitle="Очень очень очень очень длинный подзаголовок"
  title="Очень очень очень длинный заголовок"
>
  <div
    className="nav-bar"
  >
    <div
      className="button-groups"
    >
      <div
        className="group"
      >
        <NavButton
          icon={[Function]}
          shift={false}
        >
          <button
            className="button icon"
          >
            <Icon
              aria-hidden="true"
              color="gray87"
              icon={[Function]}
              size={24}
            >
              <ArrowLeftSVG
                aria-hidden="true"
                className="icon icon-block color__gray87"
                height={24}
                viewBox="0 0 36 36"
                width={24}
                xmlns="http://www.w3.org/2000/svg"
              >
                <svg
                  aria-hidden="true"
                  className="icon icon-block color__gray87"
                  height={24}
                  viewBox="0 0 36 36"
                  width={24}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M8.121 19.5l7.941 7.938c.583.585.583 1.539 0 2.125a1.511 1.511 0 0 1-2.125 0l-10.5-10.5a1.511 1.511 0 0 1 0-2.125l10.5-10.5a1.511 1.511 0 0 1 2.126 0c.582.585.582 1.539 0 2.125L8.12 16.5H31.5a1.5 1.5 0 0 1 0 3zm0 0"
                  />
                </svg>
              </ArrowLeftSVG>
            </Icon>
          </button>
        </NavButton>
      </div>
    </div>
    <div
      className="main"
    >
      <div
        className="title truncate"
      >
        Очень очень очень длинный заголовок
      </div>
      <div
        className="subtitle truncate"
      >
        Очень очень очень очень длинный подзаголовок
      </div>
    </div>
    <div
      className="button-groups end"
    >
      <div
        className="group"
      >
        <NavButton
          icon={[Function]}
          shift={false}
          stub={true}
        >
          <button
            aria-hidden="true"
            className="button icon stub"
          />
        </NavButton>
      </div>
    </div>
  </div>
</NavBar>
`;

exports[`<NavBar /> should render start link-button 1`] = `
<NavBar
  buttons={
    Object {
      "start": Object {
        "text": "Foo",
      },
    }
  }
  subtitle="Очень очень очень очень длинный подзаголовок"
  title="Очень очень очень длинный заголовок"
>
  <div
    className="nav-bar"
  >
    <div
      className="button-groups"
    >
      <div
        className="group"
      >
        <NavButton
          shift={false}
          text="Foo"
        >
          <button
            className="button"
          >
            Foo
          </button>
        </NavButton>
      </div>
    </div>
    <div
      className="main"
    >
      <div
        className="title truncate"
      >
        Очень очень очень длинный заголовок
      </div>
      <div
        className="subtitle truncate"
      >
        Очень очень очень очень длинный подзаголовок
      </div>
    </div>
    <div
      className="button-groups end"
    >
      <div
        className="group"
      >
        <NavButton
          shift={false}
          stub={true}
          text="Foo"
        >
          <button
            aria-hidden="true"
            className="button stub"
          >
            Foo
          </button>
        </NavButton>
      </div>
    </div>
  </div>
</NavBar>
`;
